# crazy_controller

./: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  package.xml
config/: aug_params.yaml  l1_params.yaml  pp_params_sim.yaml
include/crazy_controller/: aug_controller.hpp  crazy_controller.hpp  pp_controller.hpp  utils.hpp
launch/: controller_launch.py
src/: aug_controller.cpp  crazy_controller.cpp  pp_controller.cpp  utils.cpp  utils_aug.cpp  utils_pp.cpp
